<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="charleszhu.qunnipiac.edu.a2017hackathon.MainActivity">
    
    <Button
        android:id="@+id/PoliceButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="32sp"
        android:text="@string/Police"
        android:layout_gravity="center_horizontal"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        />

    <Button
        android:id="@+id/FireButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="32sp"
        android:text="@string/Fire"
        android:layout_gravity="center_horizontal"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        />

    <Button
        android:id="@+id/MedicalButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="32sp"
        android:text="@string/Medical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        />


</LinearLayout>
