<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="charleszhu.qunnipiac.edu.a2017hackathon.FireActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fire Emergency"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FireNumber"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuickTips"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        />

    <!-- Electrical Tips -->
    <Button
        android:id="@+id/ToggleElectrical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ToggleViews"
        android:text="Electrical Fire"
        />
    <LinearLayout
        android:id="@+id/Electrical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/FireTipsElectrical"
            />
    </LinearLayout>

    <!-- Oil Tips -->
    <Button
        android:id="@+id/ToggleOil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ToggleViews"
        android:text="Oil Fire"
        />
    <LinearLayout
        android:id="@+id/Oil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/FireTipsOil"
            />
    </LinearLayout>

</LinearLayout>
