<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="charleszhu.qunnipiac.edu.a2017hackathon.MedicalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MedicalNumber"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginBottom="30sp"
        />

    <!-- Sting Tips -->
    <Button
        android:id="@+id/ToggleSting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ToggleViews"
        android:text="Stings"
        />
    <LinearLayout
        android:id="@+id/Stings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/MedicalTipsStings"
            />
    </LinearLayout>

    <!-- OpenWound Tips -->
    <Button
        android:id="@+id/ToggleOpenWound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ToggleViews"
        android:text="Open Wound"
        />
    <LinearLayout
        android:id="@+id/OpenWound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/MedicalTipsOpenWound"
            />
    </LinearLayout>

    <!-- Burn Tips -->
    <Button
        android:id="@+id/ToggleBurn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ToggleViews"
        android:text="Burns"
        />
    <LinearLayout
        android:id="@+id/Burn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/MedicalTipsBurn"
            />
    </LinearLayout>


</LinearLayout>
