<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="charleszhu.qunnipiac.edu.a2017hackathon.PoliceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PoliceNumber"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginBottom="30sp"
        />
    <!-- Aggressor Tips -->
    <Button
        android:id="@+id/ToggleAggressor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ToggleViews"
        android:text="Aggressor"
        />
    <LinearLayout
        android:id="@+id/Aggressor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/PoliceTipsAggressor"
            />
    </LinearLayout>

    <!-- Theft Tips -->
    <Button
        android:id="@+id/ToggleTheft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ToggleViews"
        android:text="Theft"
        />
    <LinearLayout
        android:id="@+id/Theft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/MedicalTipsBurn"
            />
    </LinearLayout>

</LinearLayout>
